--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/username_edittext"
+        android:layout_width="match_parent"
+        android:hint="TYPE YOUR USERNAME"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:layout_height="50dp"
+        android:textSize="24sp"
+        android:background="#ecf0f1"
+        android:inputType="textCapCharacters"
+        android:textColor="#7f8c8d"
+        android:layout_marginBottom="10dp"
+        android:layout_centerVertical="true"/>
+
+    <Button
+        android:id="@+id/create_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/username_edittext"
+        android:background="#e67e22"
+        android:textColor="#fff"
+        android:textSize="24sp"
+        android:layout_marginBottom="10dp"
+        android:text="CREATE"/>
+
+    <Button
+        android:id="@+id/join_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/create_button"
+        android:background="#8e44ad"
+        android:textColor="#fff"
+        android:textSize="24sp"
+        android:text="JOIN"/>
+
 </RelativeLayout>
