--- a/app/src/main/res/layout/activity_lobby_room.xml
+++ b/app/src/main/res/layout/activity_lobby_room.xml
@@ -23,6 +23,15 @@
 
     <include layout="@layout/content_lobby_room" />
 
+    <TextView
+        android:id="@+id/mTextCondition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Medium Text"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false" />
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
