--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -40,6 +40,25 @@
                 android:layout_below="@+id/item_name"
                 />
 
+            <ImageView
+                android:id="@+id/pay_button"
+                android:src="@drawable/ic_attach_money_black_36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="10dp"
+                />
+            <ImageView
+                android:id="@+id/edit_button"
+                android:src="@drawable/ic_edit_black_36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/pay_button"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="10dp"
+                />
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
