--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,4 +49,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <EditText
+        android:id="@+id/roomname_edittext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="TYPE YOUR ROOM NUMBER IF JOIN"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:textSize="24sp"
+        android:background="#ecf0f1"
+        android:inputType="textCapCharacters"
+        android:textColor="#7f8c8d"
+        android:layout_marginTop="49dp"
+        android:layout_below="@+id/join_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
