--- a/app/src/main/res/layout/activity_lobby_room.xml
+++ b/app/src/main/res/layout/activity_lobby_room.xml
@@ -2,7 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="16dp"
+    android:id="@+id/lobby_content"
     >
+
+    <!--<android.support.design.widget.CoordinatorLayout-->
+        <!--android:id="@+id/main_content"-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
