--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -62,6 +62,34 @@
                 android:layout_marginRight="10dp"
                 />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/amount_paying"
+                android:layout_below="@id/item_price"
+                android:layout_alignParentRight="true"
+                android:textSize="18sp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/percentage"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/item_price"
+                android:layout_alignParentLeft="true"
+                android:textSize="18sp"
+                />
+
+            <SeekBar
+                android:id="@+id/SeekBarId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/amount_paying"
+                android:layout_weight="92" />
+
+
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
