--- a/app/src/main/res/layout/activity_list_items.xml
+++ b/app/src/main/res/layout/activity_list_items.xml
@@ -10,25 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/linearLayout">
+        android:id="@+id/content_activity_list_items">
 
-        <ListView
-            android:id="@+id/list"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:layout_weight="1">
-        </ListView>
+        <!--<ListView-->
+            <!--android:id="@+id/list"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_weight="1">-->
 
-    </LinearLayout>
+        <!--</ListView>-->
 
-    <!--<ListView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/listView"-->
-        <!--android:layout_alignTop="@+id/linearLayout"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_marginLeft="337dp"-->
-        <!--android:layout_marginStart="337dp" />-->
 
+
+
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv"
+        />
 <!--</RelativeLayout>-->
+</LinearLayout>
