--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/main_content">
 
     <EditText
         android:id="@+id/username_edittext"
         android:layout_width="match_parent"
-        android:hint="TYPE YOUR USERNAME"
+        android:hint="ENTER USERNAME"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:layout_height="50dp"
         android:textSize="24sp"
@@ -46,7 +47,7 @@
         android:textSize="24sp"
         android:text="JOIN"
         android:layout_marginTop="15dp"
-        android:layout_below="@+id/create_button"
+        android:layout_below="@+id/roomname_edittext"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -54,14 +55,14 @@
         android:id="@+id/roomname_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="TYPE YOUR ROOM NUMBER IF JOIN"
+        android:hint="ROOM NUMBER TO JOIN"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:textSize="24sp"
         android:background="#ecf0f1"
         android:inputType="textCapCharacters"
         android:textColor="#7f8c8d"
         android:layout_marginTop="49dp"
-        android:layout_below="@+id/join_button"
+        android:layout_below="@+id/create_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
